--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "@tarojs/runtime": "3.6.32",
     "@tarojs/shared": "3.6.32",
     "@tarojs/taro": "3.6.32",
+    "axios": "^1.7.2",
+    "express": "^4.19.2",
+    "request": "^2.88.2",
     "vue": "^3.2.40"
   },
   "devDependencies": {
@@ -69,10 +72,10 @@
     "@vue/compiler-sfc": "^3.2.40",
     "babel-preset-taro": "3.6.32",
     "css-loader": "3.6.0",
-    "postcss": "^8.3.0",
     "eslint": "^8.12.0",
     "eslint-config-taro": "3.6.32",
     "eslint-plugin-vue": "^8.0.0",
+    "postcss": "^8.3.0",
     "style-loader": "1.3.0",
     "stylelint": "9.3.0",
     "ts-node": "^10.9.1",
