--- a/package.json
+++ b/package.json
@@ -10,24 +10,10 @@
     "framework": "Vue3"
   },
   "scripts": {
-    "build:weapp": "taro build --type weapp",
-    "build:swan": "taro build --type swan",
-    "build:alipay": "taro build --type alipay",
-    "build:tt": "taro build --type tt",
-    "build:h5": "taro build --type h5",
-    "build:rn": "taro build --type rn",
-    "build:qq": "taro build --type qq",
-    "build:jd": "taro build --type jd",
-    "build:quickapp": "taro build --type quickapp",
-    "dev:weapp": "npm run build:weapp -- --watch",
-    "dev:swan": "npm run build:swan -- --watch",
-    "dev:alipay": "npm run build:alipay -- --watch",
-    "dev:tt": "npm run build:tt -- --watch",
-    "dev:h5": "npm run build:h5 -- --watch",
-    "dev:rn": "npm run build:rn -- --watch",
-    "dev:qq": "npm run build:qq -- --watch",
-    "dev:jd": "npm run build:jd -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch"
+    "build:weapp": "cross-env MODE=weapp taro build --type weapp",
+    "build:h5": "cross-env MODE=H5 taro build --type h5",
+    "dev:weapp": "cross-env MODE=weapp npm run build:weapp -- --watch",
+    "dev:h5": "cross-env MODE=H5  npm run build:h5 -- --watch"
   },
   "browserslist": [
     "last 3 versions",
@@ -71,6 +57,7 @@
     "@vue/babel-plugin-jsx": "^1.0.6",
     "@vue/compiler-sfc": "^3.2.40",
     "babel-preset-taro": "3.6.32",
+    "cross-env": "^7.0.3",
     "css-loader": "3.6.0",
     "eslint": "^8.12.0",
     "eslint-config-taro": "3.6.32",
